syntax = "proto3";

package Acoustid;

message InserOrUpdateDocumentOperation {
    uint32 id = 1;
    repeated uint32 terms = 2;
}

message DeleteDocumentOperation {
    uint32 id = 1;
}

message SetAttributeOperation {
    string name = 1;
    string value = 2;
}

message Operation {
    enum Type {
        INSERT_OR_UPDATE_DOCUMENT = 0;
        DELETE_DOCUMENT = 1;
        SET_ATTRIBUTE = 2;
    }
    Type type = 1;
    oneof op {
        InserOrUpdateDocumentOperation insert_or_update_document = 2;
        DeleteDocumentOperation delete_document = 3;
        SetAttributeOperation set_attribute = 4;
    }
}

message BatchOperation {
    repeated Operation ops = 1;
}
